--- a/style.css
+++ b/style.css
@@ -6,10 +6,25 @@ padding: 0;
     width: 100%;
     height: 100%;
 }
+.title{
+    height: 50px;
+    text-align: center;
+    font-size: 50px;
+    padding: 5px;
+}
 #canvas{
     background-color: aqua;
+    z-index: 1;
 }
 .main{
     margin:auto;
     text-align: center;
+}
+.play{
+    width: 55px;
+    height: 35px;
+}
+.buttons{
+    background-color: red;
+    padding: 5px;
 }
