--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body html{
 margin: 0;
 padding: 0;
 }
+body{
+    background: url(img/bg.png) no-repeat;
+    background-size: cover;
+}
 .body{
     width: 100%;
     height: 100%;
@@ -13,18 +17,39 @@ padding: 0;
     padding: 5px;
 }
 #canvas{
-    background-color: aqua;
-    z-index: 1;
+    background: rgba(228, 236, 236, 0.671);
+    z-index: 9;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
 }
 .main{
     margin:auto;
     text-align: center;
 }
+.button{
+    width: 60px;
+    height: 30px;
+}
 .play{
-    width: 95px;
+}
+.panel {
+    margin: auto;
+    width: 500px;
+    font-size: 20px;
+}
+table{
+    width: 500px;
     height: 55px;
+    border: 1px black solid;
+    justify-content: center;
+    text-align: center;
+}
+.score{
+    width: 125px;
 }
 .buttons{
-    background-color: red;
-    padding: 5px;
+    width: 250px;
+}
+.time{
+    width: 125px;
 }
